--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <ul>
-        <li><a href=""><img src="img/Screenshot_2023-10-20_102335-removebg-preview.png"></a></li>
-            <li><input type="text" placeholder="Bạn muống tìm gì ..."><i class='bx bxs-search-alt-2'></i> </li>
+        <li><img src="img/Screenshot_2023-10-20_102335-removebg-preview.png"></li>
+            <li><input type="text" placeholder="Bạn muống tìm gì ..." > <i class='bx bxs-search-alt-2'></i></li>
             <li><a href=""><i class='bx bxs-cart'></i>Giỏ Hàng</a></li>
             <li><a href=""><i class='bx bxs-user'></i>Đăng Nhập</a></li>
             <li><a href=""><i class='bx bxs-info-circle'></i>Thông Tin</a></li>
@@ -22,25 +22,84 @@
     <nav>
         <div class="container">
             <ul>
-                <li><a href="">Điện Thoại</a>
-                <div class="menu-container">
-                    <ul>
-                        <li> Samsung</li>
-                        <li> Iphone</li>
-                        <li> Oppo</li>
-                        <li> Xiaomi</li>
-                        <li> Realme</li>
-                        <li> Vivo</li>
-                        
-                    </ul>
-                </div>
+                <li ><a href="">Điện Thoại</a>
+                    <div class="menu-container">
+                        <ul>
+                            <li> Samsung</li>
+                            <li> Iphone</li>
+                            <li> Oppo</li>
+                            <li> Xiaomi</li>
+                            <li> Realme</li>
+                            <li> Vivo</li> 
+                        </ul>
+                    </div></li>
+                <li><a href="">Đồng Hồ</a>
+                    <div class="menu-container">
+                        <ul>
+                            <li> Apple Watch</li>
+                            <li> Samsung Watch</li>
+                            <li> Xiaomi Watch</li>
+                            <li> Oppo Watch</li>
+                            <li> Huawei Watch</li>
+                            <li> Garmin Watch</li>
+                        </ul>
+                    </div>
                 </li>
-                <li><a href="">Đồng Hồ</a></li>
-                <li><a href="">Máy Tính Bảng</a></li>
-                <li><a href="">Laptop</a></li>
-                <li><a href="">Phụ Kiện</a></li>
-                <li><a href="">Khuyến mãi</a></li>
-                <li><a href="">Liên Hệ</a></li>
+                <li><a href="">Máy Tính Bảng</a>
+                    <div class="menu-container">
+                        <ul>
+                            <li> Samsung</li>
+                            <li> Ipad</li>
+                            <li> Oppo</li>
+                            <li> Xiaomi</li>
+                            <li> Realme</li>
+                            <li> Vivo</li> 
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="">Laptop</a>
+                    <div class="menu-container">
+                        <ul>
+                            <li> Asus </li>
+                            <li> Dell </li>
+                            <li> HP </li>
+                            <li> Lenovo </li>
+                            <li> Acer </li>
+                            <li> MSI </li>
+                            <li> Macbook </li>
+                        </ul>        
+                </li>
+                <li><a href="">Phụ Kiện</a>
+                    <div class="menu-container">
+                        <ul>
+                            <li> Tai Nghe</li>
+                            <li> Sạc Dự Phòng</li>
+                            <li> Ốp Lưng</li>
+                            <li> Cáp Sạc</li>
+                            <li> Pin Dự Phòng</li>
+                            <li> Dán Màn Hình</li>
+                            <li> Thẻ Nhớ</li>
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="">Khuyến mãi</a>
+                    <div class="menu-container">
+                        <ul>
+                            <li> Khuyến mãi</li>
+                            <li> Sự kiện</li>
+                            <li> Tin tức</li>
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="">Liên Hệ</a>
+                    <div class="menu-container">
+                        <ul>
+                            <li> Liên hệ</li>
+                            <li> Hỗ trợ</li>
+                            <li> Bảo hành</li>
+                        </ul>
+                    </div>
+                </li>
             </ul>
         </div>
     </nav> 
