--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><input type="text" placeholder="Bạn muống tìm gì ..." > <i class='bx bxs-search-alt-2'></i></li>
             <li><a href=""><i class='bx bxs-cart'></i>Giỏ Hàng</a></li>
             <li><a href=""><i class='bx bxs-user'></i>Đăng Nhập</a></li>
-            <li><a href=""><i class='bx bxs-info-circle'></i>Thông Tinaaaaa</a></li>
+            <li><a href=""><i class='bx bxs-info-circle'></i>Thông Tinaaaaaaaaaa</a></li>
         </ul>
     </header>
     <nav>
@@ -25,7 +25,7 @@
                 <li ><a href="">Điện Thoại</a>
                     <div class="menu-container">
                         <ul>
-                            <li> Samsung</li>
+                            <li> aaaaaaaaaaSamsung</li>
                             <li> Iphone</li>
                             <li> Oppo</li>
                             <li> Xiaomi</li>
