--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li ><a href="">Điện Thoại</a>
                     <div class="menu-container">
                         <ul>
-                            <li> aaaaaaaaaaSamsung</li>
+                            <li> aaaaaaaacaaaaaaaaaaaabbaaaaSamsung</li>
                             <li> Iphone</li>
                             <li> Oppo</li>
                             <li> Xiaomi</li>
