--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><input type="text" placeholder="Bạn muống tìm gì ..." > <i class='bx bxs-search-alt-2'></i></li>
             <li><a href=""><i class='bx bxs-cart'></i>Giỏ Hàng</a></li>
             <li><a href=""><i class='bx bxs-user'></i>Đăng Nhập</a></li>
-            <li><a href=""><i class='bx bxs-info-circle'></i>Thông Tinaaaaaaaaaa</a></li>
+            <li><a href=""><i class='bx bxs-info-circle'></i>Thông Tin</a></li>
         </ul>
     </header>
     <nav>
@@ -25,11 +25,8 @@
                 <li ><a href="">Điện Thoại</a>
                     <div class="menu-container">
                         <ul>
-<<<<<<< HEAD
-                            <li> aaaaaaaacaaaaaaaaaaaabbaaaaSamsung</li>
-=======
-                            <li> aaaaSamsung</li>
->>>>>>> 01a548e2bd6e18d6bf2617011e267fce78b93ace
+                            <li> Samsung</li>
+                            <li>Samsung</li>
                             <li> Iphone</li>
                             <li> Oppo</li>
                             <li> Xiaomi</li>
@@ -100,7 +97,7 @@
                         <ul>
                             <li> Liên hệ</li>
                             <li> Hỗ trợ</li>
-                            <li> Bảo hành</li>
+                            <li> Tuyển dụng</li>
                         </ul>
                     </div>
                 </li>
