--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><input type="text" placeholder="Bạn muống tìm gì ..." > <i class='bx bxs-search-alt-2'></i></li>
             <li><a href=""><i class='bx bxs-cart'></i>Giỏ Hàng</a></li>
             <li><a href=""><i class='bx bxs-user'></i>Đăng Nhập</a></li>
-            <li><a href=""><i class='bx bxs-info-circle'></i>Thông Tinaaaaaaaaaa</a></li>
+            <li><a href=""><i class='bx bxs-info-circle'></i>Thông Tin</a></li>
         </ul>
     </header>
     <nav>
@@ -25,11 +25,8 @@
                 <li ><a href="">Điện Thoại</a>
                     <div class="menu-container">
                         <ul>
-<<<<<<< HEAD
-                            <li> aaaaaaaacaaaaaaaaaaaabbaaaaSamsung</li>
-=======
-                            <li> aaaaSamsung</li>
->>>>>>> 01a548e2bd6e18d6bf2617011e267fce78b93ace
+                            <li> Samsung</li>
+                            <li>Samsung</li>
                             <li> Iphone</li>
                             <li> Oppo</li>
                             <li> Xiaomi</li>
@@ -100,6 +97,7 @@
                         <ul>
                             <li> Liên hệ</li>
                             <li> Hỗ trợ</li>
+                            <li> Tuyển dụng</li>
                             <li> Bảo hành</li>
                         </ul>
                     </div>
@@ -107,5 +105,26 @@
             </ul>
         </div>
     </nav> 
+    <section class="slider">
+        <div class="slider-content">
+            <div class="slider-content-left">
+                <img src="https://img.tgdd.vn/imgt/f_webp,fit_outside,quality_100/https://cdn.tgdd.vn/2023/10/banner/TGDD--Desk--1920x450-7.png">
+                <div class="slider-content-left-bottom">
+                <img width="600" height="180" src="https://img.tgdd.vn/imgt/f_webp,fit_outside,quality_100/https://cdn.tgdd.vn/2023/10/banner/S23fe-720-220-720x220-6.png" alt="A series">
+                <img width="600" height="180" src="https://img.tgdd.vn/imgt/f_webp,fit_outside,quality_100/https://cdn.tgdd.vn/2023/10/banner/Xiaomi-720-220-720x220-5.png" alt="mi">
+            </div>
+        </div>
+        </div>
+    </section>
+    <section class="slider-product">
+        <div class="slider-product-title">
+            <img src="img/Deal1.webp">
+        </div>
+        <div class="slider-product-items">
+            <div class="slider-product-item">
+
+            </div>
+        </div>
+    </section>
    </body>
 </html> 
