--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +10,12 @@
     <link rel="stylesheet" href="css/trangchu.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
     <header>
         <ul>
-        <li><img src="img/Screenshot_2023-10-20_102335-removebg-preview.png"></li>
-            <li><input type="text" placeholder="Bạn muống tìm gì ..." > <i class='bx bxs-search-alt-2'></i></li>
+            <li><img src="img/Screenshot_2023-10-20_102335-removebg-preview.png"></li>
+            <li><input type="text" placeholder="Bạn muốn tìm gì ..."> <i class='bx bxs-search-alt-2'></i></li>
             <li><a href=""><i class='bx bxs-cart'></i>Giỏ Hàng</a></li>
             <li><a href=""><i class='bx bxs-user'></i>Đăng Nhập</a></li>
             <li><a href=""><i class='bx bxs-info-circle'></i>Thông Tin</a></li>
@@ -22,7 +24,7 @@
     <nav>
         <div class="container">
             <ul>
-                <li ><a href="">Điện Thoại</a>
+                <li><a href="">Điện Thoại</a>
                     <div class="menu-container">
                         <ul>
                             <li> Samsung</li>
@@ -31,9 +33,10 @@
                             <li> Oppo</li>
                             <li> Xiaomi</li>
                             <li> Realme</li>
-                            <li> Vivo</li> 
+                            <li> Vivo</li>
                         </ul>
-                    </div></li>
+                    </div>
+                </li>
                 <li><a href="">Đồng Hồ</a>
                     <div class="menu-container">
                         <ul>
@@ -54,7 +57,7 @@
                             <li> Oppo</li>
                             <li> Xiaomi</li>
                             <li> Realme</li>
-                            <li> Vivo</li> 
+                            <li> Vivo</li>
                         </ul>
                     </div>
                 </li>
@@ -68,7 +71,7 @@
                             <li> Acer </li>
                             <li> MSI </li>
                             <li> Macbook </li>
-                        </ul>        
+                        </ul>
                 </li>
                 <li><a href="">Phụ Kiện</a>
                     <div class="menu-container">
@@ -104,16 +107,17 @@
                 </li>
             </ul>
         </div>
-    </nav> 
+    </nav>
     <section class="slider">
         <div class="slider-content">
             <div class="slider-content-left">
-                <img src="https://img.tgdd.vn/imgt/f_webp,fit_outside,quality_100/https://cdn.tgdd.vn/2023/10/banner/TGDD--Desk--1920x450-7.png">
+                <img src="img/Screenshot 2023-10-27 101230.png">
+                <img src="img/Screenshot 2023-10-27 101434.png">
                 <div class="slider-content-left-bottom">
-                <img width="600" height="180" src="https://img.tgdd.vn/imgt/f_webp,fit_outside,quality_100/https://cdn.tgdd.vn/2023/10/banner/S23fe-720-220-720x220-6.png" alt="A series">
-                <img width="600" height="180" src="https://img.tgdd.vn/imgt/f_webp,fit_outside,quality_100/https://cdn.tgdd.vn/2023/10/banner/Xiaomi-720-220-720x220-5.png" alt="mi">
+                    <img width="600" height="180" src="img/1.webp">
+                    <img width="600" height="180" src="img/2.webp">
+                </div>
             </div>
-        </div>
         </div>
     </section>
     <section class="slider-product">
@@ -121,10 +125,25 @@
             <img src="img/Deal1.webp">
         </div>
         <div class="slider-product-items">
-            <div class="slider-product-item">
-                
+
+                <div class="list-product">
+                    <ul>
+                        <li><img src="img/h1.webp"></li>
+                        <li>laptop hp</li>
+                        <li>Giá: 10.000.000đ</li>
+                        <li><button>Mua Ngay</button></li>
+                    </ul>
+                </div>
+                <div class="list-product">
+                    <ul>
+                        <li><img src="img/h2.webp"></li>
+                        <li>samsung watch</li>
+                        <li>Giá: 9.000</li>
+                        <li><button>Mua Ngay</button></li>
+                    </ul>
             </div>
         </div>
     </section>
-   </body>
-</html> 
+</body>
+
+</html>
