--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                 <li><a href="">Điện Thoại</a>
                     <div class="menu-container">
                         <ul>
-                            <li>aaaaaaa Samsung</li>
                             <li>Samsung</li>
                             <li> Iphone</li>
                             <li> Oppo</li>
@@ -111,11 +110,11 @@
     <section class="slider">
         <div class="slider-content">
             <div class="slider-content-left">
-                <img src="img/Screenshot 2023-10-27 101230.png">
+                <!-- <img src="img/Screenshot 2023-10-27 101230.png">
                 <img src="img/Screenshot 2023-10-27 101434.png">
                 <div class="slider-content-left-bottom">
                     <img width="600" height="180" src="img/1.webp">
-                    <img width="600" height="180" src="img/2.webp">
+                    <img width="600" height="180" src="img/2.webp"> -->
                 </div>
             </div>
         </div>
@@ -125,22 +124,96 @@
             <img src="img/Deal1.webp">
         </div>
         <div class="slider-product-items">
+            <div class="slider-product-item">
+                <img src="img/h1.webp">
+                <ul>
+                    <li>laptop hp</li>
+                    <li>Giá: 10.000.000đ</li>
+                    <li><a href="">chi tiết</a></li>
+                    <li><button>Mua Ngay</button></li>
+                </ul>
+            </div>
 
-                <div class="list-product">
-                    <ul>
-                        <li><img src="img/h1.webp"></li>
-                        <li>laptop hp</li>
-                        <li>Giá: 10.000.000đ</li>
-                        <li><button>Mua Ngay</button></li>
-                    </ul>
-                </div>
-                <div class="list-product">
-                    <ul>
-                        <li><img src="img/h2.webp"></li>
-                        <li>samsung watch</li>
-                        <li>Giá: 9.000</li>
-                        <li><button>Mua Ngay</button></li>
-                    </ul>
+            <div class="slider-product-item">
+                <img src="img/h2.webp">
+                <ul>
+                    <li>samsung watch</li>
+                    <li>Giá: 9.000</li>
+                    <li><a href="">chi tiết</a></li>
+                    <li><button>Mua Ngay</button></li>
+                </ul>
+            </div>
+            <div class="slider-product-item">
+                <img src="img/h3.webp">
+                <ul>
+                    <li>laptop Lenovo</li>
+                    <li>Giá: 11.000.000đ</li>
+                    <li><a href="">chi tiết</a></li>
+                    <li><button>Mua Ngay</button></li>
+                </ul>
+            </div>
+            <div class="slider-product-item">
+                <img src="img/h4.webp">
+                <ul>
+                    <li>MVW watch</li>
+                    <li>Giá: 1.000đ</li>
+                    <li><a href="">chi tiết</a></li>
+                    <li><button>Mua Ngay</button></li>
+                </ul>
+            </div>
+            <div class="slider-product-item">
+                <img src="img/h5.webp">
+                <ul>
+                    <li>laptop Dell</li>
+                    <li>Giá: 100.000.000đ</li>
+                    <li><a href="">chi tiết</a></li>
+                    <li><button>Mua Ngay</button></li>
+                </ul>
+            </div>
+            <div class="slider-product-item">
+                <img src="img/h6.webp">
+                <ul>
+                    <li>laptop Asus</li>
+                    <li>Giá: 10.000.000đ</li>
+                    <li><a href="">chi tiết</a></li>
+                    <li><button>Mua Ngay</button></li>
+                </ul>
+            </div>
+            <div class="slider-product-item">
+                <img src="img/h7.webp">
+                <ul>
+                    <li>laptop MSI</li>
+                    <li>Giá: 10.000.000đ</li>
+                    <li><a href="">chi tiết</a></li>
+                    <li><button>Mua Ngay</button></li>
+                </ul>
+            </div> 
+            <div class="slider-product-item">
+                <img src="img/h8.webp">
+                <ul>
+                    <li>laptop Acer</li>
+                    <li>Giá: 10.000.000đ</li>
+                    <li><a href="">chi tiết</a></li>
+                    <li><button>Mua Ngay</button></li>
+                </ul>
+            </div>
+            <div class="slider-product-item">
+                <img src="img/h9.webp">
+                <ul>
+                    <li>laptop Macbook</li>
+                    <li>Giá: 10.000.000đ</li>
+                    <li><a href="">chi tiết</a></li>
+                    <li><button>Mua Ngay</button></li>
+                </ul>
+            </div>
+            <div class="slider-product-item">
+                <img src="img/h10.webp">
+                <ul>
+                    <li>laptop HP</li>
+                    <li>Giá: 10.000.000đ</li>
+                    <li><a href="">chi tiết</a></li>
+                    <li><button>Mua Ngay</button></li> 
+                </ul>
             </div>
         </div>
     </section>
