--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
                             <li> Iphone</li>
                             <li> Oppo</li>
                             <li> Xiaomi</li>
-                            <li> Realme</li>
-                            <li> Vivo</li>
                         </ul>
                     </div>
                 </li>
@@ -44,7 +42,6 @@
                             <li> Xiaomi Watch</li>
                             <li> Oppo Watch</li>
                             <li> Huawei Watch</li>
-                            <li> Garmin Watch</li>
                         </ul>
                     </div>
                 </li>
@@ -110,11 +107,11 @@
     <section class="slider">
         <div class="slider-content">
             <div class="slider-content-left">
-                <!-- <img src="img/Screenshot 2023-10-27 101230.png">
+                <img src="img/Screenshot 2023-10-27 101230.png">
                 <img src="img/Screenshot 2023-10-27 101434.png">
                 <div class="slider-content-left-bottom">
                     <img width="600" height="180" src="img/1.webp">
-                    <img width="600" height="180" src="img/2.webp"> -->
+                    <img width="600" height="180" src="img/2.webp">
                 </div>
             </div>
         </div>
@@ -187,7 +184,7 @@
                     <li><a href="">chi tiết</a></li>
                     <li><button>Mua Ngay</button></li>
                 </ul>
-            </div> 
+            </div>
             <div class="slider-product-item">
                 <img src="img/h8.webp">
                 <ul>
@@ -212,11 +209,39 @@
                     <li>laptop HP</li>
                     <li>Giá: 10.000.000đ</li>
                     <li><a href="">chi tiết</a></li>
-                    <li><button>Mua Ngay</button></li> 
+                    <li><button>Mua Ngay</button></li>
                 </ul>
             </div>
         </div>
     </section>
+    <footer>
+        <div class="foot-content">
+            <ul>
+                <li>
+                    <ul class="foot-content-container">
+                        <li><a href="">Giới Thiệu</a></li>
+                        <li><a href="">Tin Tức</a></li>
+                        <li><a href="">Chính sách bảo hành</a></li>
+                        <li><a href="">Gửi góp ý, phiếu nại</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="foot-content-container">
+                        <li><a href="">Tổng đài hỗ trợ(Miễn phí)</a></li>
+                        <li><a href="">1800 8888</a></li>
+                        <li><a href="">1800 9999</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="foot-content-container">
+                        <li><a href="">273 An Dương Vương phường 3, quận 5 ,TPHCM</a></li>
+                        <li><a href=""><i class='bx bxl-facebook-circle' ></i>facebook:HaVuyi mobile</a></li>
+                        <li><a href=""><i class='bx bxl-instagram-alt' ></i>instagram:HaVuyi mobile</a></li>
+                    </ul>
+                </li>
+            </ul>   
+        </div>
+    </footer>
 </body>
 
 </html>
