--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header>
         <ul>
         <li><img src="img/Screenshot_2023-10-20_102335-removebg-preview.png"></li>
-            <li><input type="text" placeholder="Bạn muống tìm gì ..." > <i class='bx bxs-search-alt-2'></i></li>
+            <li><input type="text" placeholder="Bạn muốn tìm gì ..." > <i class='bx bxs-search-alt-2'></i></li>
             <li><a href=""><i class='bx bxs-cart'></i>Giỏ Hàng</a></li>
-            <li><a href=""><i class='bx bxs-user'></i>Đăng Nhập</a></li>
+            <li><a href="taikhoan.html"><i class='bx bxs-user'></i>Đăng Nhập</a></li>
             <li><a href=""><i class='bx bxs-info-circle'></i>Thông Tin</a></li>
         </ul>
     </header>
@@ -25,7 +25,7 @@
                 <li ><a href="">Điện Thoại</a>
                     <div class="menu-container">
                         <ul>
-                            <li>aaaaaaa Samsung</li>
+                            <li>Samsung</li>
                             <li>Samsung</li>
                             <li> Iphone</li>
                             <li> Oppo</li>
