--- a/taikhoan.html
+++ b/taikhoan.html
@@ -16,8 +16,8 @@
     </div>
     <div class="popup">
          <div class="popup-content">
-            <img src="img/close.png" alt="Close" class="close">
-            <img src="img/user.png" alt="User">
+            <img src="img/close.png" alt="Close" class="close" style="width: 30px; height: 20px;">
+            <img src="img/user.png" alt="User" style="width: 50px; height: 50px;">
             <input type="text" placeholder="Tên đăng nhập">
             <input type="password" placeholder="Mật khẩu">
             <a href="#" class="button">Đăng nhập</a> <!--chỗ này mai mốt làm trang của admin thì bỏ link vào dấu #-->
@@ -25,8 +25,8 @@
     </div>
     <div class="popup2">
         <div class="popup-content2">
-           <img src="img/close.png" alt="Close" class="close">
-           <img src="img/user.png" alt="User">
+           <img src="img/close.png" alt="Close" class="close" style="width: 30px; height: 20px;">
+           <img src="img/user.png" alt="User" style="width: 50px; height: 50px;">
            <input type="text" placeholder="Tên đăng nhập">
            <input type="password" placeholder="Mật khẩu">
            <input type="password" placeholder="Mật khẩu cấp 2">
