--- a/web/index.html
+++ b/web/index.html
@@ -111,8 +111,7 @@
         <div class="w-75 justify-content-center py-sm-4  rounded-4" style="margin-left: 40%; ">
           <p class="display-2" style="color: #f3f3f3;">SẢN PHẨM</p>
         </div>
-        <div class="container-fluid mh-100 row mx-sm-5 py-sm-3"
-      id="root"></div>
+        <div class="container-fluid mh-100 row mx-sm-5 py-sm-3" id="root"></div>
       </div>
       
       <div class="pagination justify-content-center mt-sm-4">
