--- a/web/signup.html
+++ b/web/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Đăng Nhập</title>
     <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <style>
         body{
@@ -32,7 +32,7 @@
                         <label class="form-label">
                             Tên<span class="req">*</span>
                         </label>
-                        <input name="ten" type="text" class="fullname form-control required autocomplete="off" />
+                        <input name="ten" type="text" class="fullname form-control" required autocomplete="off"  />
                     </div>
                  <!-- / ho ten -->
         
