--- a/ProductPage/ProductDetail.html
+++ b/ProductPage/ProductDetail.html
@@ -41,7 +41,7 @@
 			<div class="nav__center">
 				<div class="nav__logo--icon"></div>
 				<div class="nav__logo--name">Porfumelus</div>
-				<form class="nav__search outline" method="get" action="index.html">
+				<form class="nav__search outline" method="get" action="tongquan.html">
 					<input class="nav__search--input" type="text" placeholder="Tìm kiếm sản phẩm...">
 					<button class="nav__search--btn outline" type="submit"><i class="fas fa-search"></i></button>
 				</form>
