--- a/ProductPage/index.html
+++ b/ProductPage/index.html
@@ -27,7 +27,7 @@
 			<div class="nav">
 				<div class="nav__link">
 					<ul style="display: contents;">
-						<li><a href="ProductPage.html" style="color: black;">Trang Chủ</a></li>
+						<li><a href="index.html" style="color: black;">Trang Chủ</a></li>
 						<li><a>Giới Thiệu</a></li>
 						<li><a>Bảo Hành</a></li>
 						<li><a>Liên Hệ</a></li>
