--- a/ViewOrderPage/orderdetail.html
+++ b/ViewOrderPage/orderdetail.html
@@ -5,7 +5,7 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <!-- Link CSS -->
- <link rel="stylesheet" href="./orderpage.css">
+ <link rel="stylesheet" href="./orderdetail.css">
  <!-- Fontawesome -->
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,6 @@
  
 </head>
 <body>
-	<div class="activemauden"></div>
  <!-- Header STARTS -->
 	<div class="header">
 			<div class="nav">
@@ -36,17 +35,17 @@
 					<ul>
 						<div class="user">
 							<div class="borderuser">
-								<li class="usersection"><div>Xin chào,</div> <div class="name"></div></li>
+								<li class="usersection"><div>Xin chào,</div>
+									<div class="name"></div>
+								</li>
 								<li class="usersection logout">| Đăng xuất</li>
-								<i class="fa fa-shopping-cart" aria-hidden="true"></i>
 							</div>
 						</div>
 						<div class="admin">
 							<div class="borderadmin">
+								<li class="adminbtn"><img src="svg/admin.svg" width="18px" height="18px"></li>
 								<li class= "adminsection"><div>Xin chào, </div> <div class="name"> </div></li>
 								<li class="adminsection logout"><a>| Đăng xuất</a></li>
-								<li class="adminbtn"><i class="fa-solid fa-gear"></i></li>
-								<li class="vieworder"><i class="fa fa-shopping-cart" aria-hidden="true"></i></li>
 							</div>
 						</div>
 						<div class="nonuser">
@@ -68,99 +67,38 @@
 			</div>
 	</div>
 <!-- Header ENDS  -->
-	<div class="top"></div>
-
 <!-- Content STARTS -->
-	<div class="content">
-		<div class="small-container cart-page">
-			<table>
-				<thead>
-					<tr>
-						<th>Sản phẩm</th>
-						<th>Dung tích</th>
-						<th>Số lượng</th>
-						<th>Giá</th>
-					</tr>
-				</thead>
-				<tbody class="productordered">
-					
-				</tbody>
-			</table>
-			<div class="product__pagination">
-				<a href="#">&laquo;</a>
-				<a href="#" class="active">1</a>
-				<a href="#">2</a>
-				<a href="#">3</a>
-				<a href="#">&raquo;</a>
-				</div>
-			<!-- Tổng chi phí -->
-			<div class="total-price">
-
-			</div>
-			<div class="orderpage-button">
-				<button class="check-shipping-info" id="myBtn">Kiểm tra thông tin vận chuyển</button>
-				<button class="checkout">Thanh toán</button>
-			</div>
+<div class="content">
+	<div class="small-container cart-page">
+		<table>
+			<thead>
+			  <tr>
+				<th>Hình ảnh</th>
+				<th>Tên Sản Phẩm</th>
+				<th>dung Tích</th>
+				<th>Giá Tiền</th>
+				<th>Số lượng</th>
+				<th>Tổng tiền</th>
+			  </tr>
+			</thead>
+		</table>
+		  <div class="order__item--detail--btn--detail"></div>
+	  <div class="empty_order_notifycation">
+		<div class="empty_order_notifycation">Bạn chưa có đơn hàng nào</div>
+		<div>
+		  <img src="./img/default.png" alt="" width="200px" height="200px" />
 		</div>
-		
-		<div id="my_shipping_modal" class="modal">
-			<!-- Modal content -->
-			<div class="modal-content">
-			  <span class="close">&times;</span>
-			  <h2>Kiểm tra thông tin vận chuyển</h2>
-			 <div class="info">
-				<label for="name"><b>Họ và tên</b></label>
-				<input type="text" class="ten" placeholder="nhập họ và tên">
-				<p class="listMes">err</p>
-				<label for="number"><b>Số điện thoại</b></label>
-				<input type="text" class="sdt" placeholder="nhập số điện thoại">
-				<p class="listMes">err</p>
-				<label for="address"><b>Địa chỉ</b></label>
-				<input type="text"  class="diachi" placeholder="nhập địa chỉ">
-				<p class="listMes">err</p>
-			 </div>
-	
-			  <small>Xin hãy xem xét cẩn thận thông tin vận chuyển kẻo gặp lỗi khi vận chuyển nha</small>
-				
-			  <button class="save">Lưu thông tin</button>
-			</div>
-		  </div>
-	
-		<script>
-			
-			var modal = document.getElementById("my_shipping_modal");
-	
-			// Get the button that opens the modal
-			var btn = document.getElementById("myBtn");
-			
-			// Get the <span> element that closes the modal
-			var span = document.getElementsByClassName("close")[0];
-			var activemauden = document.querySelector(".activemauden");
-			// When the user clicks the button, open the modal 
-			btn.onclick = function() {
-			  modal.style.display = "block";
-			  activemauden.style.display = "block";
-			  activemauden.addEventListener("click", function(){
-				modal.style.display = "none";
-				activemauden.style.display = "none";
-			  })
-			}
-			
-			// When the user clicks on <span> (x), close the modal
-			span.onclick = function() {
-			  modal.style.display = "none";
-			  activemauden.style.display = "none";
-			}
-			
-			// When the user clicks anywhere outside of the modal, close it
-			window.onclick = function(event) {
-			  if (event.target == modal) {
-				modal.style.display = "none";
-			  }
-			}    
-	
-		</script>
+	  </div>
+
+	  <div class="product__pagination">
+		<a href="#">&laquo;</a>
+		<a href="#" class="active">1</a>
+		<a href="#">2</a>
+		<a href="#">3</a>
+		<a href="#">&raquo;</a>
+	  </div>
 	</div>
+</div>
 <!-- Content ENDS -->
 
 
@@ -208,10 +146,12 @@
 			<div class="footer__terms">2023 all Right Reserved Term of use Porfumelus</div>
 		</div>
 	</div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <!-- Footer ENDS -->
-<script  src="../TrangAdmin/class.js"></script>
-<script src="./loadOrder.js"></script> -
-<script src="./XuLyLogin.js"></script>
+<script  src="../ProductPage/js/class.js"></script>
+<script src="../ProductPage/js/XuLyLogin.js"></script>
+<script src="./renderOrdered.js"></script>
 </body>
 
 </html>
