--- a/Orderpage/Orderpagee.html
+++ b/Orderpage/Orderpagee.html
@@ -28,7 +28,7 @@
 			<div class="nav">
 				<div class="nav__link">
 					<ul>
-						<li><a>Trang Chủ</a></li>
+						<li><a href="../ProductPage/index.html">Trang Chủ</a></li>
 						<li><a>Giới Thiệu</a></li>
 						<li><a>Bảo Hành</a></li>
 						<li><a>Liên Hệ</a></li>
