--- a/ViewOrderPage/ViewOrderPage.html
+++ b/ViewOrderPage/ViewOrderPage.html
@@ -39,7 +39,7 @@
 		<div class="nav">
 			<div class="nav__link">
 				<ul>
-					<li><a>Trang Chủ</a></li>
+					<li><a href="../ProductPage/index.html">Trang Chủ</a></li>
 					<li><a>Giới Thiệu</a></li>
 					<li><a>Bảo Hành</a></li>
 					<li><a>Liên Hệ</a></li>
@@ -79,8 +79,8 @@
 			<div class="nav__center">
 				<div class="nav__logo--icon"></div>
 				<div class="nav__logo--name">Porfumelus</div>
-				<form class="nav__search outline" method="get" action="index.html">
-					<input class="nav__search--input" type="text" placeholder="Tìm kiếm sản phẩm...">
+				<form class="nav__search outline" method="get" >
+					<input class="nav__search--input" type="text" placeholder="Tìm kiếm mã sản phẩm...">
 					<button class="nav__search--btn outline" type="submit"><i class="fas fa-search"></i></button>
 				</form>
 			</div>
