--- a/ProductPage/index.html
+++ b/ProductPage/index.html
@@ -29,7 +29,7 @@
 			<div class="nav">
 				<div class="nav__link">
 					<ul>
-						<li><a>Trang Chủ</a></li>
+						<li><a href="index.html">Trang Chủ</a></li>
 						<li><a>Giới Thiệu</a></li>
 						<li><a>Bảo Hành</a></li>
 						<li><a>Liên Hệ</a></li>
