--- a/TrangAdmin/Admin.html
+++ b/TrangAdmin/Admin.html
@@ -287,6 +287,7 @@
               <p>
                 <a href="#" class="color addproducticon">Thêm sản phẩm</a>
                 <input type="text" class="product-search" placeholder="Tìm kiếm sản phẩm...">
+                <button class="product__search--btn outline" type="submit"><img src="svg/magnifying_glass.svg" width="22px" height="22px"></img></i></button>
               </p>
           </div>
           <!-- <i class="fa-thin fa-magnifying-glass"></i> -->
@@ -381,6 +382,8 @@
           <a class="add-user" href="#" id="modal-link">Thêm người dùng</a>
           <div class="search">
             <input type="text" class="user-search" placeholder="Tìm kiếm người dùng">
+            <button class="user__search--btn outline" type="submit"><img src="svg/magnifying_glass.svg" width="22px" height="22px"></img></i></button>
+            
           </div>
           <div class="filter">
             <div class="text">Lọc</div>
