--- a/ViewOrderPage/ViewOrderPage.html
+++ b/ViewOrderPage/ViewOrderPage.html
@@ -79,7 +79,7 @@
 			<div class="nav__center">
 				<div class="nav__logo--icon"></div>
 				<div class="nav__logo--name">Porfumelus</div>
-				<form class="nav__search outline" method="get" >
+				<form class="nav__search outline" method="get" action="index.html">
 					<input class="nav__search--input" type="text" placeholder="Tìm kiếm mã sản phẩm...">
 					<button class="nav__search--btn outline" type="submit"><i class="fas fa-search"></i></button>
 				</form>
@@ -103,10 +103,7 @@
 					</tr>
 				</thead>
 				<tbody class="productorderedd">
-					<td>0319</td>
-					<td>22-03-2004</td>
-					<td>COD (nhận tiền mặt khi giao hàng)</td>
-					<td>789098767đ</td>
+					
 				</tbody>
 			</table>
 
@@ -188,7 +185,7 @@
 	<!-- Footer ENDS -->
 	<script src="../ProductPage/js/class.js"></script>
 	<script src="../ProductPage/js/XuLyLogin.js"></script>
-	<script src="./renderOrdered.js"></script>
+	<script src="renderOrdered.js"></script>
 </body>
 
 </html>
