--- a/ProductPage/index.html
+++ b/ProductPage/index.html
@@ -175,7 +175,7 @@
 				</div>
 			</div>
 			<div class="buttons">
-				<button id="prev"></button>
+				<button id="prev"><</button>
 				<button id="next">></button>
 			</div>
 			<ul class="dots">
@@ -306,19 +306,6 @@
 		</div>
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    <!-- <script>
-        $('.owl-carousel').owlCarousel({
-            loop:true,
-            margin:10,
-            nav:false,
-            responsive:{   
-                0:{
-                    items:1
-                }
-            }
-        });
-    </script> -->
 
 <!-- Footer ENDS -->
 <script  src="./js/class.js"></script>
