--- a/Orderpage/Orderpagee.html
+++ b/Orderpage/Orderpagee.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.green.min.css" integrity="sha512-C8Movfk6DU/H5PzarG0+Dv9MA9IZzvmQpO/3cIlGIflmtY3vIud07myMu4M/NTPJl8jmZtt/4mC9bAioMZBBdA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
- <title>Porfumelus</title>
+ <title>Havuyi</title>
  
 </head>
 <body>
@@ -59,7 +59,7 @@
 			</div>
 			<div class="nav__center">
 				<div class="nav__logo--icon"></div>
-				<div class="nav__logo--name">Porfumelus</div>
+				<div class="nav__logo--name">Havuyi</div>
 				<form class="nav__search outline" method="get" action="index.html">
 					<input class="nav__search--input" type="text" placeholder="Tìm kiếm sản phẩm...">
 					<button class="nav__search--btn outline" type="submit"><i class="fas fa-search"></i></button>
@@ -168,7 +168,7 @@
 	<div class="footer parent">
 		<div class="child">
 			<div class="footer__left">
-				<div class="footer__left--name">Porfumelus</div>
+				<div class="footer__left--name">Havuyi</div>
 				<div class="footer__left--slogan">Kích thích mọi giác quan<br> với hương thơm đẳng cấp.</div>
 				<div class="footer__left--social">
 					<button class="footer__left--socialbtn"><i class="fab fa-facebook-square"></i></button>
@@ -205,7 +205,7 @@
 				</div>
 		</div>
 		<div class="child">
-			<div class="footer__terms">2023 all Right Reserved Term of use Porfumelus</div>
+			<div class="footer__terms">2023 all Right Reserved Term of use Havuyi</div>
 		</div>
 	</div>
 <!-- Footer ENDS -->
