--- a/ProductPage/index.html
+++ b/ProductPage/index.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.green.min.css" integrity="sha512-C8Movfk6DU/H5PzarG0+Dv9MA9IZzvmQpO/3cIlGIflmtY3vIud07myMu4M/NTPJl8jmZtt/4mC9bAioMZBBdA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
- <title>Porfumelus</title>
+ <title>Havuyi</title>
  
 </head>
 <body>
@@ -60,8 +60,8 @@
 			</div>
 			<div class="nav__center">
 				<div class="nav__logo">
-					<div class="nav__logo--icon"></div>
-					<div class="nav__logo--name">Porfumelus</div>
+					<div class="nav__logo--icon"> <img src="img/logo.png" alt="logo" class="nav__logo--icon"></div>
+					<div class="nav__logo--name">Havuyi</div>
 				</div>
 				<form class="nav__search outline" onsubmit="return false;">
 					<input class="nav__search--input" type="text" placeholder="Tìm kiếm sản phẩm...">
@@ -265,8 +265,8 @@
 		<div class="footer__box">
 			<div class="child">
 				<div class="footer__left">
-					<div class="footer__left--name">Porfumelus</div>
-					<div class="footer__left--slogan">Kích thích mọi giác quan<br> với hương thơm đẳng cấp.</div>
+					<div class="footer__left--name">Havuyi</div>
+					<div class="footer__left--slogan">Hương thơm dài lâu<br> cho cuộc tình trên lầu dai.</div>
 					<div class="footer__left--social">
 						
 						<a href="https://www.facebook.com"><button class="footer__left--socialbtn"><img src="svg/facebook.svg"></img></button></a>
@@ -302,7 +302,7 @@
 					</div>
 					</div>
 			</div>
-			<div class="footer__terms">2023 all Right Reserved Term of use Porfumelus</div>
+			<div class="footer__terms">2023 all Right Reserved Term of use Havuyi</div>
 		</div>
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
