--- a/TrangAdmin/Admin.html
+++ b/TrangAdmin/Admin.html
@@ -24,7 +24,7 @@
                 <img src="images/logo.png" alt="">
             </div>
 
-            <span class="logo_name">Porfumelus</span>
+            <span class="logo_name">Havuyi</span>
         </div>
 
         <div class="menu-items">
