--- a/ViewOrderPage/ViewOrderPage.html
+++ b/ViewOrderPage/ViewOrderPage.html
@@ -29,7 +29,7 @@
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
-	<title>Porfumelus</title>
+	<title>Havuyi</title>
 
 </head>
 
@@ -78,7 +78,7 @@
 			</div>
 			<div class="nav__center">
 				<div class="nav__logo--icon"></div>
-				<div class="nav__logo--name">Porfumelus</div>
+				<div class="nav__logo--name">Havuyi</div>
 				<form class="nav__search outline" method="get" action="index.html">
 					<input class="nav__search--input" type="text" placeholder="Tìm kiếm mã sản phẩm...">
 					<button class="nav__search--btn outline" type="submit"><i class="fas fa-search"></i></button>
@@ -130,8 +130,8 @@
 	<div class="footer parent">
 		<div class="child">
 			<div class="footer__left">
-				<div class="footer__left--name">Porfumelus</div>
-				<div class="footer__left--slogan">Kích thích mọi giác quan<br> với hương thơm đẳng cấp.</div>
+				<div class="footer__left--name">Havuyi</div>
+				<div class="footer__left--slogan">Hương thơm dài lâu<br> cho cuộc tình trên lầu dai.</div>
 				<div class="footer__left--social">
 					<button class="footer__left--socialbtn"><i class="fab fa-facebook-square"></i></button>
 					<button class="footer__left--socialbtn"><i class="fab fa-instagram-square"></i></button>
@@ -173,7 +173,7 @@
 			</div>
 		</div>
 		<div class="child">
-			<div class="footer__terms">2023 all Right Reserved Term of use Porfumelus</div>
+			<div class="footer__terms">2023 all Right Reserved Term of use Havuyi</div>
 		</div>
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
