--- a/Orderpage/Orderpagee.html
+++ b/Orderpage/Orderpagee.html
@@ -58,7 +58,7 @@
 					</ul>
 			</div>
 			<div class="nav__center">
-				<div class="nav__logo--icon"></div>
+				<img src="img/logo.png" alt="logo" class="nav__logo--icon">
 				<div class="nav__logo--name">Havuyi</div>
 				<form class="nav__search outline" method="get" action="index.html">
 					<input class="nav__search--input" type="text" placeholder="Tìm kiếm sản phẩm...">
