--- a/Orderpage/Orderpagee.html
+++ b/Orderpage/Orderpagee.html
@@ -45,8 +45,8 @@
 							<div class="borderadmin">
 								<li class= "adminsection"><div>Xin chào, </div> <div class="name"> </div></li>
 								<li class="adminsection logout"><a>| Đăng xuất</a></li>
-								<li class="adminbtn"><i class="fa-solid fa-gear"></i></li>
-								<li class="vieworder"><i class="fa fa-shopping-cart" aria-hidden="true"></i></li>
+								<!-- <li class="adminbtn"><i class="fa-solid fa-gear"></i></li>
+								<li class="vieworder"><i class="fa fa-shopping-cart" aria-hidden="true"></i></li> -->
 							</div>
 						</div>
 						<div class="nonuser">
