--- a/indextrang2.html
+++ b/indextrang2.html
@@ -210,69 +210,69 @@
 				</div>
 				</div>
 				<div class="product__box">
-				 <div class="product__item outline">
+				 <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img19.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Gucci Memoire Dune Odeur EDP</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
+				</a></div>
+                <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img21.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Dior Sauvage Parfum</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
+				</a></div>
+                <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img23.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Tom Ford Velvet Orchird Lumiere</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
+				</a></div>
+                <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img25.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Gucci Memoire Dune Odeur EDP</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
+				</a></div>
+                <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img27.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Tom Ford Lost Cherry Eau De Parfum</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
+				</a></div>
+                <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img29.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Tom Ford Velvet Orchird Lumiere</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
+				</a></div>
+                <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img31.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Gucci Guilty Love Edition Pour Homme</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
+				</a></div>
+                <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img33.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Tom Ford Ombré Leather</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
+				</a></div>
+                <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img35.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Louis Vuitton Les Sables Roses</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
+				</a></div>
 			</div>
 		</div>
 				<div class="product__pagination" >
@@ -289,10 +289,9 @@
 				 <h3>GIỎ HÀNG CỦA BẠN</h3>
 					<div class="product__modal__cart__close">
 							<script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
-							<lord-icon src="https://cdn.lordicon.com/wgwcqouc.json" trigger="" 
-							colors="primary:#7047ee,secondary:#7047ee"
-								style="width:100px">
-							</lord-icon>
+							<img src="svg/x.svg" width="16px" height="16px"
+							colors="primary:#7047ee,secondary:#7047ee" style="width:100px">
+						</img>
 					</div>
 			</div>
 			<div class="product__modal__cart__content">
@@ -353,7 +352,7 @@
 
 <!-- Footer ENDS -->
 <script  src="index.js"></script>
-
+<script src="index1.js"></script>
 </body>
 
 </html>
