--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<div class="nav">
 			<div class="nav__link">
 				<ul>
-					<li><a href="../ProductPage/index.html">Trang Chủ</a></li>
+					<li><a href="index.html">Trang Chủ</a></li>
 					<li><a>Giới Thiệu</a></li>
 					<li><a>Bảo Hành</a></li>
 					<li><a>Liên Hệ</a></li>
@@ -235,69 +235,69 @@
 					</div>
 				</div>
 				<div class="product__box">
-					<div class="product__item outline">
+					<div class="product__item outline"><a href="ProductDetail.html">
 						<div class="product__item--img"><img src="./img/img1.jpg"></div>
-						<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+						<div class="product__item--name">Nước Hoa Louis Vuitton Heures DAbsence EDP</div>
 						<div class="product__item--price">727.000đ-1.727.000đ</div>
 						<div class="product__item--size">3 size</div>
 						<div class="product__item--rating ">★★★★★</div>
-					</div>
-					<div class="product__item outline">
+					</a></div>
+					<div class="product__item outline"><a href="ProductDetail.html">
 						<div class="product__item--img"><img src="./img/img3.jpg"></div>
-						<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+						<div class="product__item--name">Nước Hoa Dior Miss Dior EDT</div>
 						<div class="product__item--price">727.000đ-1.727.000đ</div>
 						<div class="product__item--size">3 size</div>
 						<div class="product__item--rating ">★★★★★</div>
-					</div>
-					<div class="product__item outline">
+					</a></div>
+					<div class="product__item outline"><a href="ProductDetail.html">
 						<div class="product__item--img"><img src="./img/img5.jpg"></div>
-						<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+						<div class="product__item--name">Nước Hoa Louis Vuitton Afternoon Swim</div>
 						<div class="product__item--price">727.000đ-1.727.000đ</div>
 						<div class="product__item--size">3 size</div>
 						<div class="product__item--rating ">★★★★★</div>
-					</div>
-					<div class="product__item outline">
+					</a></div>
+					<div class="product__item outline"><a href="ProductDetail.html">
 						<div class="product__item--img"><img src="./img/img7.jpg"></div>
-						<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+						<div class="product__item--name">Nước Hoa Gucci Bamboo</div>
 						<div class="product__item--price">727.000đ-1.727.000đ</div>
 						<div class="product__item--size">3 size</div>
 						<div class="product__item--rating ">★★★★★</div>
-					</div>
-					<div class="product__item outline">
+					</a></div>
+					<div class="product__item outline"><a href="ProductDetail.html">
 						<div class="product__item--img"><img src="./img/img9.jpg"></div>
-						<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+						<div class="product__item--name">Nước Hoa Tom Ford Cafe Rose (2023)</div>
 						<div class="product__item--price">727.000đ-1.727.000đ</div>
 						<div class="product__item--size">3 size</div>
 						<div class="product__item--rating ">★★★★★</div>
-					</div>
-					<div class="product__item outline">
+					</a></div>
+					<div class="product__item outline"><a href="ProductDetail.html">
 						<div class="product__item--img"><img src="./img/img11.jpg"></div>
-						<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+						<div class="product__item--name">Nước Hoa Calvin Klein Ins 2U Her</div>
 						<div class="product__item--price">727.000đ-1.727.000đ</div>
 						<div class="product__item--size">3 size</div>
 						<div class="product__item--rating ">★★★★★</div>
-					</div>
-					<div class="product__item outline">
+					</a></div>
+					<div class="product__item outline"><a href="ProductDetail.html">
 						<div class="product__item--img"><img src="./img/img13.jpg"></div>
-						<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+						<div class="product__item--name">Nước Hoa Tom Ford Velvet Orchird Lumiere</div>
 						<div class="product__item--price">727.000đ-1.727.000đ</div>
 						<div class="product__item--size">3 size</div>
 						<div class="product__item--rating ">★★★★★</div>
-					</div>
-					<div class="product__item outline">
+					</a></div>
+					<div class="product__item outline"><a href="ProductDetail.html">
 						<div class="product__item--img"><img src="./img/img15.jpg"></div>
-						<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+						<div class="product__item--name">Nước Hoa Dior Sauvage Elixir EDP</div>
 						<div class="product__item--price">727.000đ-1.727.000đ</div>
 						<div class="product__item--size">3 size</div>
 						<div class="product__item--rating ">★★★★★</div>
-					</div>
-					<div class="product__item outline">
+					</a></div>
+					<div class="product__item outline"><a href="ProductDetail.html">
 						<div class="product__item--img"><img src="./img/img17.jpg"></div>
-						<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+						<div class="product__item--name">Nước Hoa Dior Sauvage Parfum</div>
 						<div class="product__item--price">727.000đ-1.727.000đ</div>
 						<div class="product__item--size">3 size</div>
 						<div class="product__item--rating ">★★★★★</div>
-					</div>
+					</a></div>
 				</div>
 			</div>
 			<div class="product__pagination">
@@ -308,15 +308,15 @@
 				<a href="#">&raquo;</a>
 			</div>
 		</div>
-		<div class="product__modal__cart__container">
+		<div class="product__modal__cart__container" >
 			<div class="product__modal__cart__content__box">
 				<div class="product__modal__cart__title">
 					<h3>GIỎ HÀNG CỦA BẠN</h3>
 					<div class="product__modal__cart__close">
 						<script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
-						<lord-icon src="https://cdn.lordicon.com/wgwcqouc.json" trigger=""
+						<img src="svg/x.svg" width="16px" height="16px"
 							colors="primary:#7047ee,secondary:#7047ee" style="width:100px">
-						</lord-icon>
+						</img>
 					</div>
 				</div>
 				<div class="product__modal__cart__content">
@@ -388,7 +388,7 @@
 
 	<!-- Footer ENDS -->
 	<script src="index.js"></script>
-
+	<script src="index1.js"></script>
 </body>
 
 </html>
