--- a/indextrang3.html
+++ b/indextrang3.html
@@ -210,69 +210,62 @@
 				</div>
 				</div>
 				<div class="product__box">
-				 <div class="product__item outline">
+				 <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img44.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Tom Ford Lost Cherry Eau De Parfum</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
+				</a></div>
+                <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img39.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Gucci Memoire Dune Odeur EDP</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
+				</a></div>
+                <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img41.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Tom Ford Ombré Leather</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
+				</a></div>
+                <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img47.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Gucci Memoire Dune Odeur EDP</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
+				</a></div>
+                <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img49.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Gucci Guilty Love Edition Pour Homme</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
+				</a></div>
+                <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img51.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Louis Vuitton Les Sables Roses</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
+				</a></div>
+                <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img53.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Tom Ford Velvet Orchird Lumiere</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
+				</a></div>
+                <div class="product__item outline"><a href="ProductDetail.html">
 					<div class="product__item--img"><img src="./img/img55.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+					<div class="product__item--name">Nước Hoa Nouveau Monde Louis Vuitton</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-				</div>
-                <div class="product__item outline">
-					<div class="product__item--img"><img src="./img/img59.jpg"></div>
-					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-					<div class="product__item--price">727.000đ-1.727.000đ</div>
-					<div class="product__item--size">3 size</div>
-					<div class="product__item--rating ">★★★★★</div>
-				</div>
+				</a></div>
 			</div>
 		</div>
 				<div class="product__pagination" >
@@ -289,10 +282,9 @@
 				 <h3>GIỎ HÀNG CỦA BẠN</h3>
 					<div class="product__modal__cart__close">
 							<script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
-							<lord-icon src="https://cdn.lordicon.com/wgwcqouc.json" trigger="" 
-							colors="primary:#7047ee,secondary:#7047ee"
-								style="width:100px">
-							</lord-icon>
+							<img src="svg/x.svg" width="16px" height="16px"
+							colors="primary:#7047ee,secondary:#7047ee" style="width:100px">
+						</img>
 					</div>
 			</div>
 			<div class="product__modal__cart__content">
@@ -353,7 +345,7 @@
 
 <!-- Footer ENDS -->
 <script  src="index.js"></script>
-
+<script src="index1.js"></script>
 </body>
 
 </html>
