--- a/Orderpage.html
+++ b/Orderpage.html
@@ -138,9 +138,9 @@
 				<div class="footer__left--name">Porfumelus</div>
 				<div class="footer__left--slogan">Kích thích mọi giác quan<br> với hương thơm đẳng cấp.</div>
 				<div class="footer__left--social">
-					<button class="footer__left--socialbtn"><i class="fab fa-facebook-square"></i></button>
-					<button class="footer__left--socialbtn"><i class="fab fa-instagram-square"></i></button>
-					<button class="footer__left--socialbtn"><i class="fab fa-twitter-square"></i></button>
+					<a href="https://www.facebook.com"><button class="footer__left--socialbtn"><img src="svg/facebook.svg"></img></button></a>
+					<a href="https://www.instagram.com"><button class="footer__left--socialbtn"><img src="svg/instagram.svg"></img></button></a>
+					<a href="https://www.twitter.com"><button class="footer__left--socialbtn"><img src="svg/twitter.svg"></img></button></a>
 				</div>
 			</div>
 			<div class="footer__right">
