--- a/ProductDetail.html
+++ b/ProductDetail.html
@@ -189,7 +189,7 @@
 					</div>
 					<div class="child">
 						<button class="product__addtocart--btn">Thêm vào giỏ hàng</button>
-						<button class="product__buy--btn">Mua ngay</button>
+						<button class="product__buy--btn"><a href="Orderpage.html">Mua ngay</a></button>
 					</div>
 				</div>
 			</div>
