--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 					</a></div>
 					<div class="product__item outline"><a href="ProductDetail.html">
 						<div class="product__item--img"><img src="./img/img9.jpg"></div>
-						<div class="product__item--name">Nước Hoa Tom Ford Cafe Rose (2023)</div>
+						<div class="product__item--name">Nước Hoa Tom Ford Cafe Rose </div>
 						<div class="product__item--price">727.000đ-1.727.000đ</div>
 						<div class="product__item--size">3 size</div>
 						<div class="product__item--rating ">★★★★★</div>
