--- a/admin/admin.html
+++ b/admin/admin.html
@@ -48,9 +48,14 @@
             
             <ul class="logout-mode">
                 <li><a href="../index.html">
+                        <i class="uil uil-signout"></i>
+                        <span class="backhome" style="cursor: pointer;">Trở về trang chủ</span>
+                    </a>
+                </li><br>
+                <li><a href="admin.html" style="color: gray;">
                     <i class="uil uil-signout"></i>
-                    <span class="backhome" style="cursor: pointer;">Trở về trang chủ</span>
-                </a></li>
+                    <span class="backhome" style="cursor: pointer;">Trở về trang tổng quan</span>
+                </a>
             </li>
             </ul>
         </div>
@@ -103,21 +108,26 @@
                     <div class="data names">
                         <span class="data-title">Name</span>
                         <span class="data-list">Prem Shahi</span>
+                        <span class="data-list">Amogus</span>
                     </div>
                     <div class="data email">
                         <span class="data-title">Email</span>
                         <span class="data-list">premshahi@gmail.com</span>
+                        <span class="data-list">Amogus@gmail.com</span>
                     </div>
                     <div class="data joined">
                         <span class="data-title">Vào lúc</span>
                         <span class="data-list">2022-02-12</span>
+                        <span class="data-list">2023-02-12</span>
                     </div>
                     <div class="data note">
                         <span class="data-title">Nội dung</span>
-                        <span class="data-list">Nguời dùng abc đã đặt 1 đơn hàng!</span>
+                        <span class="data-list">Nguời dùng Prem đã đặt 15 đơn!</span>
+                        <span class="data-list">Nguời dùng Amogus đã đặt 13 đơn!</span>
                     </div>
                 </div>
             </div>
         </div>
         
     </section>
+</body>
