--- a/admin/quanlysanphamadmin.html
+++ b/admin/quanlysanphamadmin.html
@@ -49,9 +49,14 @@
             
             <ul class="logout-mode">
                 <li><a href="../index.html">
+                        <i class="uil uil-signout"></i>
+                        <span class="backhome" style="cursor: pointer;">Trở về trang chủ</span>
+                    </a>
+                </li><br>
+                <li><a href="admin.html" style="color: gray;">
                     <i class="uil uil-signout"></i>
-                    <span class="backhome" style="cursor: pointer;">Trở về trang chủ</span>
-                </a></li>
+                    <span class="backhome" style="cursor: pointer;">Trở về trang tổng quan</span>
+                </a>
             </li>
             </ul>
         </div>
