--- a/admin/quanlynguoidung.html
+++ b/admin/quanlynguoidung.html
@@ -15,12 +15,10 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <script src="https://kit.fontawesome.com/6bddc9f4be.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styleadmin.css">
-    <link rel="stylesheet" href="style.css">
      
     <!----===== Iconscout CSS ===== -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <script src="https://kit.fontawesome.com/6bddc9f4be.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styleadmin.css">
     <script src="https://kit.fontawesome.com/yourcode.js"></script>
     <title>Admin Dashboard Panel</title>
     <script>
@@ -77,7 +75,7 @@
                         <span class="backhome" style="cursor: pointer;">Trở về trang chủ</span>
                     </a>
                 </li><br>
-                <li><a href="admin.html" style="color: gray;">
+                <li><a href="admin.html" style="color: gray; font-size: 16px;">
                     <i class="uil uil-signout"></i>
                     <span class="backhome" style="cursor: pointer;">Trở về trang tổng quan</span>
                 </a>
